# echemdb-converters

./: .gitignore  .pylintrc  ChangeLog  README.md  environment.yml  pyproject.toml  rever.xsh  setup.py
.github/workflows/: doc.yaml  lint.yml  test.yaml
doc/: README.md  api.md  cliusage.md  conf.py  index.md  installation.md
doc/api/: baseloader.md  ec_unit_package_adapter.md  eclab_adapter.md  gamryloader.md
doc/news/: bilogic.rst  cli-pixi-tests.rst  doc2.rst  fieldnesting.rst  fix_rever_pixi_upload.rst  gamryloader.rst  pixi.rst
docs/: .buildinfo  api.html  cliusage.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: api.md.txt  index.md.txt  installation.md.txt
docs/_sources/api/: csvloader.md.txt  eclabloader.md.txt
docs/api/: baseloader.html  csvloader.html  eclabloader.html  gamryloader.html
echemdbconverters/: __main__.py  baseloader.py  column_names.py  csvloader.py  ec_unit_package_adapter.py  ecconverter.py  eclab_adapater.py  eclab_adapter.py  eclabconverter.py  eclabloader.py  entrypoint.py  gamryloader.py
echemdbconverters/test/: cli.py
test/csv/: eclab_cv_csv.mpt  eclab_cv_csv.mpt.metadata  eclab_cv_ec.mpt.metadata  unit.csv.metadata
test/data/: eclab_ca.csv.expected  eclab_ca.mpt  eclab_cv.csv.expected  eclab_cv.json.expected  eclab_cv.mpt
