[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "echemdbconverters"
version = "0.2.1"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
description = "echemdb-converters is a Python library and command line tool to load csv data and convert those into frictionless Data Packages."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "clevercsv>=0.7.0,<0.9.0",
    "click>=8,<9",
    "pandas>=1.3,<3",
    "unitpackage>=0.8.4,<0.9.0",
]


[project.scripts]
echemdbconverters = "echemdbconverters.entrypoint:cli"

[tool.setuptools]
packages = [
    "echemdbconverters",
    "echemdbconverters.test",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "win-64"]

[tool.pixi.environments]
python-39 = ["test", "clitest", "python-39"]
python-310 = ["test", "clitest", "python-310"]
python-311 = ["test", "clitest", "python-311"]
python-312 = ["test", "clitest", "python-312"]
dev = ["dev", "doc", "test", "lint", "clitest"]

[tool.pixi.dependencies]
click = "*"
unitpackage = "*"
pandas = "*"
python = "*"

[tool.pixi.tasks]
echemdbconverters = "echemdbconverters"

[tool.pixi.pypi-dependencies]
echemdbconverters = { path = ".", editable = true }

[tool.pixi.feature.python-39.dependencies]
python = "3.9"

[tool.pixi.feature.python-310.dependencies]
python = "3.10"

[tool.pixi.feature.python-311.dependencies]
python = "3.11"

[tool.pixi.feature.python-312.dependencies]
python = "3.12"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-xdist = "*"

[tool.pixi.feature.test.tasks]
doctest = "pytest -n auto --doctest-modules echemdbconverters"

[tool.pixi.feature.lint.dependencies]
black = ">=23,<24"
isort = "*"
pylint = ">=3,<3.1"

[tool.pixi.feature.lint.tasks]
pylint = "pylint echemdbconverters"
black = "black echemdbconverters"
isort = "isort --profile black echemdbconverters"
lint = { depends-on = ["pylint", "black", "isort"] }

[tool.pixi.feature.clitest.tasks]
cli-default-csv-convert = "echemdbconverters csv test/csv/default.csv --outdir test/generated"
cli-default-csv-diff = "git diff --no-index --word-diff -- test/generated/default.json test/generated/default.json.expected"
cli-default-csv-validate = '''python -c "import pandas as pd; from pandas.testing import assert_frame_equal; assert_frame_equal(pd.read_csv('test/generated/default.csv'),pd.read_csv('test/generated/default.csv.expected'))"'''
cli-default-csv = { depends-on = ["cli-default-csv-convert", "cli-default-csv-diff", "cli-default-csv-validate"] }
cli-eclab-cv-convert = "echemdbconverters csv test/csv/eclab_cv_csv.mpt --outdir test/generated --metadata test/csv/eclab_cv_csv.mpt.metadata --device eclab"
cli-eclab-cv-diff = "git diff --no-index --word-diff -- test/generated/eclab_cv_csv.json test/generated/eclab_cv_csv.json.expected"
cli-eclab-cv-validate = "python -c 'import pandas as pd; pd.testing.assert_frame_equal(pd.read_csv(\"test/generated/eclab_cv_csv.csv\"), pd.read_csv(\"test/generated/eclab_cv_csv.csv.expected\"))'"
cli-eclab-cv = { depends-on = ["cli-eclab-cv-convert", "cli-eclab-cv-diff", "cli-eclab-cv-validate"]}
cli-eclab-ca-cc-convert = "echemdbconverters csv test/csv/eclab_ca-cc_csv_decimal_comma.mpt --outdir test/generated --metadata test/csv/eclab_ca-cc_csv_decimal_comma.mpt.metadata --device eclab"
cli-eclab-ca-cc-diff = "git diff --no-index --word-diff -- test/generated/eclab_ca-cc_csv_decimal_comma.json test/generated/eclab_ca-cc_csv_decimal_comma.json.expected"
cli-eclab-ca-cc-validate = "python -c 'import pandas as pd; pd.testing.assert_frame_equal(pd.read_csv(\"test/generated/eclab_ca-cc_csv_decimal_comma.csv\"), pd.read_csv(\"test/generated/eclab_ca-cc_csv_decimal_comma.csv.expected\"))'"
cli-eclab-ca-cc = { depends-on = ["cli-eclab-ca-cc-convert", "cli-eclab-ca-cc-diff", "cli-eclab-ca-cc-validate"]}
cli-gamry-cv-convert = "echemdbconverters csv test/csv/gamry_cv_all_cycles.DTA --outdir test/generated --metadata test/csv/gamry_cv_all_cycles.DTA.metadata --device gamry"
cli-gamry-cv-diff = "git diff --no-index --word-diff -- test/generated/gamry_cv_all_cycles.json test/generated/gamry_cv_all_cycles.json.expected"
cli-gamry-cv-validate = "python -c 'import pandas as pd; pd.testing.assert_frame_equal(pd.read_csv(\"test/generated/gamry_cv_all_cycles.csv\"), pd.read_csv(\"test/generated/gamry_cv_all_cycles.csv.expected\"))'"
cli-gamry-cv = { depends-on = ["cli-gamry-cv-convert", "cli-gamry-cv-diff", "cli-gamry-cv-validate"]}
cli-unit-csv-convert = "echemdbconverters csv test/csv/unit.csv --outdir test/generated --metadata test/csv/unit.csv.metadata"
cli-unit-csv-diff = "git diff --no-index --word-diff -- test/generated/unit.json test/generated/unit.json.expected"
cli-unit-csv-validate = '''python -c "import pandas; pandas.testing.assert_frame_equal(pandas.read_csv('test/generated/unit.csv'), pandas.read_csv('test/generated/unit.csv.expected'))"'''
cli-unit-csv = { depends-on = ["cli-unit-csv-convert", "cli-unit-csv-diff", "cli-unit-csv-validate"]}

clitest = { depends-on = ["cli-default-csv", "cli-eclab-cv", "cli-eclab-ca-cc", "cli-gamry-cv", "cli-unit-csv"] }

[tool.pixi.feature.doc.dependencies]
jupytext = "*"
linkchecker = "*"
myst-parser = "*"
myst-nb = "*"
sphinx = "*"
sphinx-design = "*"
sphinx_rtd_theme = "*"

[tool.pixi.feature.doc.tasks]
doc = "cd doc && make html SPHINXOPTS='-W -n --keep-going'"

[tool.pixi.feature.dev.dependencies]
pip = "*"
conda = "*"
